add a check to make sure we get same scores

--- a/pytorch-tf.ipynb
+++ b/pytorch-tf.ipynb
@@ -30,9 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "type_lookups = {}\n",
@@ -44,7 +42,8 @@
     "    size = c.kernel_size\n",
     "    parameters = [p for p in c.parameters()]\n",
     "    W = parameters[0].data.numpy()\n",
-    "    b = parameters[1].data.numpy()\n",
+    "    if len(parameters) > 1:\n",
+    "        b = parameters[1].data.numpy()\n",
     "    #print(W.shape,)\n",
     "\n",
     "    W = np.transpose(W,[2,3,1,0])\n",
@@ -52,10 +51,14 @@
     "\n",
     "    with tf.variable_scope(\"conv\"):\n",
     "        wi = tf.constant_initializer(W)\n",
-    "        bi = tf.constant_initializer(b)\n",
+    "        if len(parameters) > 1:\n",
+    "            bi = tf.constant_initializer(b)\n",
     "        W = tf.get_variable('weights',shape=W.shape,initializer=wi)#,\n",
-    "        b = tf.get_variable('bias',shape=b.shape,initializer=bi)#,\n",
-    "    x = tf.nn.conv2d(kwargs['inp'],W,[1,c.stride[0],c.stride[1],1],padding) + b\n",
+    "        if len(parameters) > 1:\n",
+    "            b = tf.get_variable('bias',shape=b.shape,initializer=bi)#,\n",
+    "    x = tf.nn.conv2d(kwargs['inp'],W,[1,c.stride[0],c.stride[1],1],padding)\n",
+    "    if len(parameters) > 1:\n",
+    "        x = tf.nn.bias_add(x,b)\n",
     "    #print('conv ', x.get_shape())\n",
     "    return x\n",
     "\n",
@@ -101,7 +104,9 @@
     "            unknown_class(c2[1])\n",
     "            print(c2_class)\n",
     "    return x\n",
-    "\n",
+    "def batch_norm(c,**kwargs):\n",
+    "    print('batch_norm')\n",
+    "    return kwargs['inp']\n",
     "type_lookups[torch.nn.modules.conv.Conv2d] = conv2d\n",
     "type_lookups[torch.nn.modules.activation.ReLU] = relu\n",
     "type_lookups[torch.nn.modules.container.Sequential] = seq_container\n",
@@ -109,19 +114,22 @@
     "type_lookups[torch.nn.modules.pooling.AvgPool2d] = avg_pool\n",
     "type_lookups[torch.nn.modules.dropout.Dropout] = dropout\n",
     "type_lookups[torchvision.models.squeezenet.Fire] = fire_module\n",
-    "\n",
+    "type_lookups[torch.nn.modules.batchnorm.BatchNorm2d] = batch_norm\n",
     "tf.reset_default_graph()\n",
     "input_image = tf.placeholder('float',shape=[None,224,224,3])\n",
-    "for idx,c in enumerate(model.children()):\n",
-    "    if idx is 0:\n",
-    "        with tf.variable_scope('features'):\n",
-    "            features = type_lookups[c.__class__](c,inp=input_image)\n",
-    "    elif idx is 1:\n",
-    "        with tf.variable_scope('classifier'):\n",
-    "            classifier = type_lookups[c.__class__](c,inp=features)\n",
-    "            classifier = tf.reshape(classifier,[-1,1000])\n",
-    "    else:\n",
-    "        print('Do not know how to handle this extra model')"
+    "if len([_ for _ in model.children()]) == 2:\n",
+    "    for idx,c in enumerate(model.children()):\n",
+    "        if idx is 0:\n",
+    "            with tf.variable_scope('features'):\n",
+    "                features = type_lookups[c.__class__](c,inp=input_image)\n",
+    "        elif idx is 1:\n",
+    "            with tf.variable_scope('classifier'):\n",
+    "                classifier = type_lookups[c.__class__](c,inp=features)\n",
+    "                classifier = tf.reshape(classifier,[-1,1000])\n",
+    "else:\n",
+    "    x = input_image\n",
+    "    for idx,c in enumerate(model.children()):\n",
+    "        x = type_lookups[c.__class__](c,inp=x)"
    ]
   },
   {
@@ -172,6 +180,30 @@
    "outputs": [],
    "source": [
     "saver.save(sess, 'squeezenet.ckpt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.autograd import Variable\n",
+    "input_data = torch.FloatTensor(np.transpose(np.array(imgs),[0,3,1,2]))\n",
+    "model.eval()\n",
+    "pyt_scores = model(Variable(input_data))\n",
+    "scores_ref = pyt_scores.data.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rel_error(x, y):\n",
+    "    return np.max(np.abs(x - y) / (np.maximum(1e-8, np.abs(x) + np.abs(y))))\n",
+    "print(rel_error(scores,scores_ref))"
    ]
   }
  ],
