--- a/test_saved.ipynb
+++ b/test_saved.ipynb
@@ -3,13 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from squeezenet import SqueezeNet"
    ]
   },
   {
@@ -19,12 +18,27 @@
    "outputs": [],
    "source": [
     "sess = tf.Session()\n",
-    "new_saver = tf.train.import_meta_graph('squeezenet.ckpt.meta')\n",
-    "new_saver.restore(sess, \"./squeezenet.ckpt\")\n",
     "\n",
-    "input_image = sess.graph.get_operation_by_name('Placeholder').outputs[0]\n",
-    "classifier = sess.graph.get_operation_by_name('classifier/Reshape').outputs[0]\n",
-    "features = sess.graph.get_operation_by_name('features/layer12/concat').outputs[0] "
+    "model = SqueezeNet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saver = tf.train.Saver()\n",
+    "saver.restore(sess, \"./squeezenet.ckpt\")\n",
+    "input_image = model.image\n",
+    "classifier = model.classifier\n",
+    "features = model.features\n",
+    "# old way\n",
+    "#new_saver = tf.train.import_meta_graph('squeezenet.ckpt.meta')\n",
+    "#new_saver.restore(sess, \"./squeezenet.ckpt\")\n",
+    "#input_image = sess.graph.get_operation_by_name('Placeholder').outputs[0]\n",
+    "#classifier = sess.graph.get_operation_by_name('classifier/Reshape').outputs[0]\n",
+    "#features = sess.graph.get_operation_by_name('features/layer12/concat').outputs[0] "
    ]
   },
   {
@@ -54,6 +68,27 @@
     "scores = sess.run(classifier,feed_dict={input_image:np.array(imgs).reshape([-1,224,224,3])})\n",
     "for idx,s in enumerate(np.argmax(scores,1)):\n",
     "    print(img_names[idx],labels[s])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "import torchvision.models as models\n",
+    "import torchvision\n",
+    "from torch.autograd import Variable\n",
+    "model = models.squeezenet1_1(pretrained=True)\n",
+    "input_data = torch.FloatTensor(np.transpose(np.array(imgs),[0,3,1,2]))\n",
+    "model.eval()\n",
+    "pyt_scores = model(Variable(input_data))\n",
+    "scores_ref = pyt_scores.data.numpy()\n",
+    "def rel_error(x, y):\n",
+    "    return np.max(np.abs(x - y) / (np.maximum(1e-8, np.abs(x) + np.abs(y))))\n",
+    "print(rel_error(scores,scores_ref))"
    ]
   },
   {
