who needs sizes

--- a/pytorch-tf.ipynb
+++ b/pytorch-tf.ipynb
@@ -138,7 +138,7 @@
     "type_lookups[torchvision.models.squeezenet.Fire] = fire_module\n",
     "type_lookups[torch.nn.modules.batchnorm.BatchNorm2d] = batch_norm\n",
     "tf.reset_default_graph()\n",
-    "input_image = tf.placeholder('float',shape=[None,224,224,3],name='input_image')\n",
+    "input_image = tf.placeholder('float',shape=[None,None,None,3],name='input_image')\n",
     "\n",
     "if True:\n",
     "    outfp.write('def fire_module(x,inp,sp,e11p,e33p):\\n')\n",
@@ -170,7 +170,7 @@
     "        out_s = out_s + '    '\n",
     "\n",
     "        if idx is 0:\n",
-    "            outfp.write(out_s+\"self.image = tf.placeholder('float',shape=[None,224,224,3],name='input_image')\\n\")\n",
+    "            outfp.write(out_s+\"self.image = tf.placeholder('float',shape=[None,None,None,3],name='input_image')\\n\")\n",
     "            outfp.write(out_s+\"self.layers = []\\n\")\n",
     "\n",
     "            outfp.write(out_s+'x = self.image\\n')\n",
